--- a/projects/ae-doc/package.json
+++ b/projects/ae-doc/package.json
@@ -1,11 +1,15 @@
 {
   "name": "ae-doc",
-  "version": "0.0.1",
+  "author": {
+    "name": "Ahmet Emrebas",
+    "email": "aemrebasus@gmail.com"
+  },
+  "version": "1.0.0",
   "description": "Angular Material Documentation",
-  "homepage": "",
+  "homepage": "https://aemrebasus.github.io/material-doc/",
   "repository": {
     "type": "NPM",
-    "url": ""
+    "url": "https://github.com/aemrebasus/material-doc"
   },
   "peerDependencies": {
     "@angular/common": "^10.1.6",
